# cargo-remote

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/agent/: Cargo.toml
crates/agent/src/: lib.rs  main.rs  proto.rs
crates/agent/tests/: protocol.rs
crates/core/: build.rs
crates/core/src/outbound/transfer/: agent.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: main.rs  server.rs
