[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/cli",
    "crates/mcp",
    "crates/agent",
]

[workspace.package]
version = "0.1.0"
authors = ["ech0riginal"]
license = "MIT"
edition = "2021"
repository = "https://github.com/cyantific-io/rustle"
homepage = "https://github.com/cyantific-io/rustle"
keywords = ["remote", "build", "ssh", "cargo", "mcp"]
categories = ["development-tools::cargo-plugins", "command-line-utilities"]

[workspace.dependencies]
# Internal crates
rustle-core = { path = "crates/core" }

# Errors & async
thiserror = "2"
tokio = { version = "1.52", features = ["rt-multi-thread", "macros", "process", "io-util", "fs", "time", "sync"] }
futures = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Serialization (transport DTOs / config only — never on domain models)
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# CLI
clap = { version = "4.6", features = ["derive"] }

# MCP
rmcp = { version = "1.7", features = ["server", "transport-io", "macros"] }
schemars = "1"

# Cargo project introspection
cargo_metadata = "0.23"

# Pure-Rust SSH transport: file transfer over SFTP + remote command execution over an
# exec channel. No `ssh`/`rsync` binaries are shelled out.
russh = "0.61"
russh-sftp = "2.3"
walkdir = "2.5"
dirs = "5"

# Interactive password prompt (no-echo) for one-time key enrollment (CLI only).
rpassword = "7"
