[package]
name = "rustle-mcp"
description = "MCP server exposing remote cargo builds (build/test/check/clippy) as tools"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "rustle-mcp"
path = "src/main.rs"

[dependencies]
rustle-core.workspace = true
clap.workspace = true
rmcp.workspace = true
schemars.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
